--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,6 +9,7 @@ variables:
   DOCKER_IMAGE_NAME: "team03-webapi"
   TARGET_BRANCH: "CICD_2"
   GIT_STRATEGY: none
+  GIT_USERNAME: "fsa_HongTL"  # Replace with your Git username
 
 # Default configuration for all jobs
 default:
@@ -32,14 +33,17 @@ test-connectivity:
     - git config --global url."https://gitlab-ci-token:${CI_JOB_TOKEN}@git.fa.edu.vn/".insteadOf "http://git.fa.edu.vn/"
     - git config --global url."https://gitlab-ci-token:${CI_JOB_TOKEN}@git.fa.edu.vn/".insteadOf "https://git.fa.edu.vn/"
   script:
-    - echo "=== Runner Connectivity Test ==="
-    - echo "Git config check:"
-    - git config --list | grep url || echo "No URL configs"
-    - echo "Available files:"
-    - ls -la
-    - echo "System info:"
-    - uname -a
-    - echo "=== Connectivity test passed! ==="
+    script:
+    - apk add --no-cache git curl jq
+    # Configure Git authentication with personal token
+    - echo "Configuring Git credentials..."
+    - git config --global credential.helper store
+    - echo "https://${GIT_USERNAME}:${GIT_ACCESS_TOKEN}@git.fa.edu.vn" > ~/.git-credentials
+    - git config --global user.name "$GIT_USERNAME"
+    - git config --global user.email "$GIT_USERNAME@users.noreply.gitlab.com"
+    - echo "Testing Git authentication..."
+    - git ls-remote "http://git.fa.edu.vn/hcm25_cpl_net_06/team03_be.git" || echo "Authentication test failed, but continuing"
+    - echo "Prepare stage completed successfully"
   rules:
     - if: '$CI_COMMIT_REF_NAME == $TARGET_BRANCH'
 
