--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,6 +8,7 @@ variables:
   TEST_PATH: "WebAPI/ZTest/ZTest.csproj"
   DOCKER_IMAGE_NAME: "team03-webapi"
   TARGET_BRANCH: "CICD_2"
+  GIT_USERNAME: "fsa_HongTL"
 
 # Default configuration for all jobs
 default:
@@ -24,6 +25,10 @@ unit-tests:
   tags:
     - cicd
   before_script:
+    - echo "=== Debug Git Authentication ==="
+    - echo "GIT_USERNAME: ${GIT_USERNAME}"
+    - if [ -z "${GIT_ACCESS_TOKEN}" ]; then echo "ERROR: GIT_ACCESS_TOKEN is empty!"; exit 1; else echo "GIT_ACCESS_TOKEN is set (length: $(echo ${GIT_ACCESS_TOKEN} | wc -c))"; fi
+    - echo "Configuring Git authentication..."
     - git config --global url."https://${GIT_USERNAME}:${GIT_ACCESS_TOKEN}@git.fa.edu.vn/hcm25_cpl_net_06/team03_be.git/".insteadOf "https://git.fa.edu.vn/"
   script:
     - echo "=== Running Unit Tests ==="
@@ -61,6 +66,10 @@ code-quality:
   tags:
     - cicd
   before_script:
+    - echo "=== Debug Git Authentication ==="
+    - echo "GIT_USERNAME: ${GIT_USERNAME}"
+    - if [ -z "${GIT_ACCESS_TOKEN}" ]; then echo "ERROR: GIT_ACCESS_TOKEN is empty!"; exit 1; else echo "GIT_ACCESS_TOKEN is set (length: $(echo ${GIT_ACCESS_TOKEN} | wc -c))"; fi
+    - echo "Configuring Git authentication..."
     - git config --global url."https://${GIT_USERNAME}:${GIT_ACCESS_TOKEN}@git.fa.edu.vn/".insteadOf "https://git.fa.edu.vn/"
     - git config --global url."https://${GIT_USERNAME}:${GIT_ACCESS_TOKEN}@git.fa.edu.vn/".insteadOf "http://git.fa.edu.vn/"
   script:
