--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,90 +16,90 @@ default:
   image: mcr.microsoft.com/dotnet/sdk:8.0
 
 stages:
-  - test
+  # - test
   - docker
-  - deploy
+  # - deploy
 
-# Run unit tests
-unit-tests:
-  stage: test
-  tags:
-    - cicd
-  before_script:
-    - echo "=== Debug Git Authentication ==="
-    - 'if [ -z "${GIT_ACCESS_TOKEN}" ]; then echo "ERROR: GIT_ACCESS_TOKEN is empty!"; exit 1; else echo "GIT_ACCESS_TOKEN is set"; fi'
-    - echo "Configuring Git authentication..."
-    - git config --global url."https://${GIT_USERNAME}:${GIT_ACCESS_TOKEN}@git.fa.edu.vn/".insteadOf "https://git.fa.edu.vn/"
-    - echo "Git authentication configured successfully"
-    - echo "=== Cloning repository manually after authentication ==="
-    - git clone https://git.fa.edu.vn/hcm25_cpl_net_06/team03_be.git .
-    - git checkout ${CI_COMMIT_SHA}
-    - echo "Repository cloned successfully"
-  script:
-    - echo "=== Running Unit Tests ==="
-    - echo "Current directory:"
-    - pwd
-    - echo "Available files and directories:"
-    - ls -la
-    - echo "Checking if WebAPI directory exists:"
-    - if [ -d "WebAPI" ]; then echo "WebAPI directory found"; else echo "WebAPI directory NOT found"; fi
-    - cd WebAPI
-    - echo "WebAPI directory contents:"
-    - ls -la
-    - echo "Restoring packages..."
-    - dotnet restore WebAPI.sln
-    - echo "Building solution..."
-    - dotnet build WebAPI.sln --configuration Release
-    - echo "Running tests with coverage..."
-    - mkdir -p TestResults
-    - dotnet test ZTest/ZTest.csproj --configuration Release --no-build --logger trx --results-directory TestResults/
-    - echo "=== Tests completed! ==="
-  artifacts:
-    when: always
-    paths:
-      - WebAPI/TestResults/
-    reports:
-      junit:
-        - WebAPI/TestResults/*.trx
-    expire_in: 1 week
-  rules:
-    - if: '$CI_COMMIT_REF_NAME == $TARGET_BRANCH'
+# # Run unit tests
+# unit-tests:
+#   stage: test
+#   tags:
+#     - cicd
+#   before_script:
+#     - echo "=== Debug Git Authentication ==="
+#     - 'if [ -z "${GIT_ACCESS_TOKEN}" ]; then echo "ERROR: GIT_ACCESS_TOKEN is empty!"; exit 1; else echo "GIT_ACCESS_TOKEN is set"; fi'
+#     - echo "Configuring Git authentication..."
+#     - git config --global url."https://${GIT_USERNAME}:${GIT_ACCESS_TOKEN}@git.fa.edu.vn/".insteadOf "https://git.fa.edu.vn/"
+#     - echo "Git authentication configured successfully"
+#     - echo "=== Cloning repository manually after authentication ==="
+#     - git clone https://git.fa.edu.vn/hcm25_cpl_net_06/team03_be.git .
+#     - git checkout ${CI_COMMIT_SHA}
+#     - echo "Repository cloned successfully"
+#   script:
+#     - echo "=== Running Unit Tests ==="
+#     - echo "Current directory:"
+#     - pwd
+#     - echo "Available files and directories:"
+#     - ls -la
+#     - echo "Checking if WebAPI directory exists:"
+#     - if [ -d "WebAPI" ]; then echo "WebAPI directory found"; else echo "WebAPI directory NOT found"; fi
+#     - cd WebAPI
+#     - echo "WebAPI directory contents:"
+#     - ls -la
+#     - echo "Restoring packages..."
+#     - dotnet restore WebAPI.sln
+#     - echo "Building solution..."
+#     - dotnet build WebAPI.sln --configuration Release
+#     - echo "Running tests with coverage..."
+#     - mkdir -p TestResults
+#     - dotnet test ZTest/ZTest.csproj --configuration Release --no-build --logger trx --results-directory TestResults/
+#     - echo "=== Tests completed! ==="
+#   artifacts:
+#     when: always
+#     paths:
+#       - WebAPI/TestResults/
+#     reports:
+#       junit:
+#         - WebAPI/TestResults/*.trx
+#     expire_in: 1 week
+#   rules:
+#     - if: '$CI_COMMIT_REF_NAME == $TARGET_BRANCH'
 
-# Code quality check
-code-quality:
-  stage: test
-  tags:
-    - cicd
-  before_script:
-    - echo "=== Debug Git Authentication ==="
-    - 'if [ -z "${GIT_ACCESS_TOKEN}" ]; then echo "ERROR: GIT_ACCESS_TOKEN is empty!"; exit 1; else echo "GIT_ACCESS_TOKEN is set"; fi'
-    - echo "Configuring Git authentication..."
-    - git config --global url."https://${GIT_USERNAME}:${GIT_ACCESS_TOKEN}@git.fa.edu.vn/".insteadOf "https://git.fa.edu.vn/"
-    - git config --global url."https://${GIT_USERNAME}:${GIT_ACCESS_TOKEN}@git.fa.edu.vn/".insteadOf "http://git.fa.edu.vn/"
-    - echo "Git authentication configured successfully"
-    - echo "=== Cloning repository manually after authentication ==="
-    - git clone https://git.fa.edu.vn/hcm25_cpl_net_06/team03_be.git .
-    - git checkout ${CI_COMMIT_SHA}
-    - echo "Repository cloned successfully"
-  script:
-    - echo "=== Code Quality Analysis ==="
-    - echo "Current directory:"
-    - pwd
-    - echo "Available files:"
-    - ls -la
-    - cd WebAPI
-    - echo "WebAPI directory contents:"
-    - ls -la
-    - echo "Restoring packages..."
-    - dotnet restore WebAPI.sln
-    - echo "Building solution..."
-    - dotnet build WebAPI.sln --configuration Release
-    - echo "Checking code format..."
-    - dotnet format --verify-no-changes --verbosity diagnostic WebAPI.sln || echo "⚠️ Code formatting issues found"
-    - echo "=== Code quality check completed! ==="
-  allow_failure: true
-  rules:
-    - if: '$CI_COMMIT_REF_NAME == $TARGET_BRANCH'
+# # Code quality check
+# code-quality:
+#   stage: test
+#   tags:
+#     - cicd
+#   before_script:
+#     - echo "=== Debug Git Authentication ==="
+#     - 'if [ -z "${GIT_ACCESS_TOKEN}" ]; then echo "ERROR: GIT_ACCESS_TOKEN is empty!"; exit 1; else echo "GIT_ACCESS_TOKEN is set"; fi'
+#     - echo "Configuring Git authentication..."
+#     - git config --global url."https://${GIT_USERNAME}:${GIT_ACCESS_TOKEN}@git.fa.edu.vn/".insteadOf "https://git.fa.edu.vn/"
+#     - git config --global url."https://${GIT_USERNAME}:${GIT_ACCESS_TOKEN}@git.fa.edu.vn/".insteadOf "http://git.fa.edu.vn/"
+#     - echo "Git authentication configured successfully"
+#     - echo "=== Cloning repository manually after authentication ==="
+#     - git clone https://git.fa.edu.vn/hcm25_cpl_net_06/team03_be.git .
+#     - git checkout ${CI_COMMIT_SHA}
+#     - echo "Repository cloned successfully"
+#   script:
+#     - echo "=== Code Quality Analysis ==="
+#     - echo "Current directory:"
+#     - pwd
+#     - echo "Available files:"
+#     - ls -la
+#     - cd WebAPI
+#     - echo "WebAPI directory contents:"
+#     - ls -la
+#     - echo "Restoring packages..."
+#     - dotnet restore WebAPI.sln
+#     - echo "Building solution..."
+#     - dotnet build WebAPI.sln --configuration Release
+#     - echo "Checking code format..."
+#     - dotnet format --verify-no-changes --verbosity diagnostic WebAPI.sln || echo "⚠️ Code formatting issues found"
+#     - echo "=== Code quality check completed! ==="
+#   allow_failure: true
+#   rules:
+#     - if: '$CI_COMMIT_REF_NAME == $TARGET_BRANCH'
 
 # Build Docker image
 docker-build:
@@ -141,51 +141,51 @@ docker-build:
   rules:
     - if: '$CI_COMMIT_REF_NAME == $TARGET_BRANCH'
 
-# Deploy to staging
-deploy-staging:
-  stage: deploy
-  tags:
-    - cicd
-  dependencies:
-    - docker-build
-  environment:
-    name: staging
-    url: http://staging.team03-api.local
-  script:
-    - echo "=== Deploying to Staging ==="
-    - echo "Stopping existing containers..."
-    - docker-compose -f docker-compose.yml down || true
-    - echo "Pulling latest images..."
-    - docker-compose -f docker-compose.yml pull
-    - echo "Starting new containers..."
-    - docker-compose -f docker-compose.yml up -d
-    - echo "Waiting for application to start..."
-    - sleep 30
-    - echo "=== Deployment to staging completed! ==="
-  rules:
-    - if: '$CI_COMMIT_REF_NAME == $TARGET_BRANCH'
+# # Deploy to staging
+# deploy-staging:
+#   stage: deploy
+#   tags:
+#     - cicd
+#   dependencies:
+#     - docker-build
+#   environment:
+#     name: staging
+#     url: http://staging.team03-api.local
+#   script:
+#     - echo "=== Deploying to Staging ==="
+#     - echo "Stopping existing containers..."
+#     - docker-compose -f docker-compose.yml down || true
+#     - echo "Pulling latest images..."
+#     - docker-compose -f docker-compose.yml pull
+#     - echo "Starting new containers..."
+#     - docker-compose -f docker-compose.yml up -d
+#     - echo "Waiting for application to start..."
+#     - sleep 30
+#     - echo "=== Deployment to staging completed! ==="
+#   rules:
+#     - if: '$CI_COMMIT_REF_NAME == $TARGET_BRANCH'
 
-# Deploy to production (manual)
-deploy-production:
-  stage: deploy
-  tags:
-    - cicd
-  dependencies:
-    - docker-build
-  environment:
-    name: production
-    url: http://team03-api.production.local
-  script:
-    - echo "=== Deploying to Production ==="
-    - echo "Stopping existing containers..."
-    - docker-compose -f docker-compose.yml down || true
-    - echo "Pulling latest images..."
-    - docker-compose -f docker-compose.yml pull
-    - echo "Starting new containers..."
-    - docker-compose -f docker-compose.yml up -d
-    - echo "Waiting for application to start..."
-    - sleep 30
-    - echo "=== Deployment to production completed! ==="
-  when: manual
-  rules:
-    - if: '$CI_COMMIT_REF_NAME == $TARGET_BRANCH'
+# # Deploy to production (manual)
+# deploy-production:
+#   stage: deploy
+#   tags:
+#     - cicd
+#   dependencies:
+#     - docker-build
+#   environment:
+#     name: production
+#     url: http://team03-api.production.local
+#   script:
+#     - echo "=== Deploying to Production ==="
+#     - echo "Stopping existing containers..."
+#     - docker-compose -f docker-compose.yml down || true
+#     - echo "Pulling latest images..."
+#     - docker-compose -f docker-compose.yml pull
+#     - echo "Starting new containers..."
+#     - docker-compose -f docker-compose.yml up -d
+#     - echo "Waiting for application to start..."
+#     - sleep 30
+#     - echo "=== Deployment to production completed! ==="
+#   when: manual
+#   rules:
+#     - if: '$CI_COMMIT_REF_NAME == $TARGET_BRANCH'
