Update Git authentication to use GIT_ACCESS_TOKEN and remove Azure deployment
🔧 Key Changes:
- Changed all PERSONAL_TOKEN references to GIT_ACCESS_TOKEN
- Updated prepare, unit-tests, code-quality, and build jobs authentication
- Completely removed Azure deployment job and configurations
- Cleaned up pipeline to focus on test and build stages only

📋 Pipeline Structure:
- prepare: Git authentication setup and validation
- test: Unit tests and code quality checks
- build: Docker image build and push to GitLab Container Registry

🚀 Variables Required:
- GIT_ACCESS_TOKEN: Personal access token for Git authentication
- CI_REGISTRY_PASSWORD, CI_REGISTRY_USER: GitLab registry credentials (auto-provided)

✅ Ready for simplified GitLab CI/CD execution

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -38,7 +38,7 @@ prepare:
     - git ls-remote "http://git.fa.edu.vn/hcm25_cpl_net_06/team03_be.git" || echo "Authentication test failed, but continuing"
     - echo "Prepare stage completed successfully"
   tags:
-    - docker
+    - cicd
 
 # Run unit tests
 unit-tests:
@@ -174,4 +174,4 @@ build:
     - echo "  - $CI_REGISTRY_IMAGE/$DOCKER_IMAGE_NAME:$CI_COMMIT_SHA"
     - echo "  - $CI_REGISTRY_IMAGE/$DOCKER_IMAGE_NAME:latest"
   tags:
-    - docker
+    - cicd
