--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,35 +1,62 @@
-services:
-  db:
-    image: postgres:14.1-alpine
-    restart: always
-    environment:
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=12345
-      - POSTGRES_DB=MovieTheater
-    ports:
-      - '5432:5432'
-    volumes:
-      - db:/var/lib/postgresql/data
-    healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U postgres -d MovieTheater"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
+version: '3.8'
 
+services:
   api:
     build:
       context: .
-      dockerfile: ./Dockerfile
+      dockerfile: Dockerfile
+    container_name: team03-webapi
     ports:
-      - "5030:5030"        # Chỉ HTTP
-    depends_on:
-      db:
-        condition: service_healthy
+      - "5250:8080"
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
-      - ASPNETCORE_URLS=http://+:5030                    # Chỉ HTTP
-      - ConnectionStrings__Local=Host=db;Port=5432;Database=MovieTheater;Username=postgres;Password=12345
+      - ConnectionStrings__DefaultConnection=Host=db;Database=team03_db;Username=postgres;Password=12345
+      - ElasticSearch__Uri=http://elasticsearch:9200
+      - SWAGGER_ENABLED=true
+    depends_on:
+      - db
+      - elasticsearch
+    # Thêm cấu hình restart để container tự khởi động lại nếu gặp lỗi
+    restart: unless-stopped
+    # Thêm network để đảm bảo các containers kết nối được với nhau
+    networks:
+      - team03-network
+
+  db:
+    image: postgres:15
+    container_name: team03-db
+    environment:
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=12345
+      - POSTGRES_DB=team03_db
+    ports:
+      - "5433:5432"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+      - ./database:/docker-entrypoint-initdb.d
+    networks:
+      - team03-network
+    restart: unless-stopped
+
+  elasticsearch:
+    image: docker.elastic.co/elasticsearch/elasticsearch:8.12.0
+    container_name: team03-elasticsearch
+    environment:
+      - discovery.type=single-node
+      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
+      - xpack.security.enabled=false
+    ports:
+      - "9200:9200"
+    volumes:
+      - esdata:/usr/share/elasticsearch/data
+    networks:
+      - team03-network
+    restart: unless-stopped
 
 volumes:
-  db:
-    driver: local
+  postgres_data:
+  esdata:
+
+networks:
+  team03-network:
+    driver: bridge
