Update Git authentication to use GIT_ACCESS_TOKEN and remove Azure deployment
🔧 Key Changes:
- Changed all PERSONAL_TOKEN references to GIT_ACCESS_TOKEN
- Updated prepare, unit-tests, code-quality, and build jobs authentication
- Completely removed Azure deployment job and configurations
- Cleaned up pipeline to focus on test and build stages only

📋 Pipeline Structure:
- prepare: Git authentication setup and validation
- test: Unit tests and code quality checks
- build: Docker image build and push to GitLab Container Registry

🚀 Variables Required:
- GIT_ACCESS_TOKEN: Personal access token for Git authentication
- CI_REGISTRY_PASSWORD, CI_REGISTRY_USER: GitLab registry credentials (auto-provided)

✅ Ready for simplified GitLab CI/CD execution

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,7 +11,7 @@ variables:
   DOCKER_HOST: tcp://docker:2375
   
   # Docker image configuration
-  DOCKER_IMAGE_NAME: "team03-webapi"
+  IMAGE_NAME: "team03-webapi"
   
   # Git configuration
   GIT_STRATEGY: none
@@ -80,12 +80,8 @@ build:
     - find . -name "Dockerfile" -type f
     # Then continue with the Docker build
     - echo "Building Docker image with commit hash $CI_COMMIT_SHA..."
-    - DOCKER_DEFAULT_PLATFORM=linux/amd64 docker build -t $CI_REGISTRY_IMAGE/$DOCKER_IMAGE_NAME:$CI_COMMIT_SHA -t $CI_REGISTRY_IMAGE/$DOCKER_IMAGE_NAME:latest .
-    - docker push $CI_REGISTRY_IMAGE/$DOCKER_IMAGE_NAME:$CI_COMMIT_SHA
-    - docker push $CI_REGISTRY_IMAGE/$DOCKER_IMAGE_NAME:latest
-    - echo "=== Docker build and push completed successfully! ==="
-    - echo "Image tags pushed:"
-    - echo "  - $CI_REGISTRY_IMAGE/$DOCKER_IMAGE_NAME:$CI_COMMIT_SHA"
-    - echo "  - $CI_REGISTRY_IMAGE/$DOCKER_IMAGE_NAME:latest"
+    - DOCKER_DEFAULT_PLATFORM=linux/amd64 docker build -t $IMAGE_NAME:$CI_COMMIT_SHA -t $IMAGE_NAME:latest .
+    - docker push $IMAGE_NAME:$CI_COMMIT_SHA
+    - docker push $IMAGE_NAME:latest
   tags:
     - cicd
