--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,8 +10,8 @@ variables:
   DOCKER_TLS_CERTDIR: ""
   DOCKER_HOST: tcp://docker:2375
   
-  # Docker image configuration
-  IMAGE_NAME: "team03-webapi"
+  # Package Registry configuration
+  IMAGE_NAME: "$CI_REGISTRY_IMAGE/team03-webapi"
   
   # Git configuration
   GIT_STRATEGY: none
@@ -68,9 +68,9 @@ build:
         git fetch && git checkout $TARGET_BRANCH && git pull;
       fi
     
-    # Login to GitLab Container Registry
+    # Login to GitLab Container Registry using CI_JOB_TOKEN
     - echo "Logging into GitLab Container Registry..."
-    - echo $CI_REGISTRY_PASSWORD | docker login $CI_REGISTRY --username $CI_REGISTRY_USER --password-stdin || exit 1
+    - echo $CI_JOB_TOKEN | docker login $CI_REGISTRY --username gitlab-ci-token --password-stdin || exit 1
   script:
     - echo "Listing repository contents..."
     - ls -la
@@ -78,10 +78,24 @@ build:
     - pwd
     - echo "Searching for Dockerfile..."
     - find . -name "Dockerfile" -type f
-    # Then continue with the Docker build
+    
+    # Build Docker image with proper registry path
     - echo "Building Docker image with commit hash $CI_COMMIT_SHA..."
     - DOCKER_DEFAULT_PLATFORM=linux/amd64 docker build -t $IMAGE_NAME:$CI_COMMIT_SHA -t $IMAGE_NAME:latest .
+    
+    # Push to GitLab Package Registry
+    - echo "Pushing to GitLab Package Registry..."
     - docker push $IMAGE_NAME:$CI_COMMIT_SHA
     - docker push $IMAGE_NAME:latest
+    
+    # Optional: Tag and push with version if CI_COMMIT_TAG exists
+    - |
+      if [ ! -z "$CI_COMMIT_TAG" ]; then
+        echo "Tagging and pushing version $CI_COMMIT_TAG..."
+        docker tag $IMAGE_NAME:latest $IMAGE_NAME:$CI_COMMIT_TAG
+        docker push $IMAGE_NAME:$CI_COMMIT_TAG
+      fi
   tags:
     - cicd
+  after_script:
+    - docker logout $CI_REGISTRY
