--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,10 +5,11 @@ stages:
 
 variables:
   TARGET_BRANCH: "CICD_2"
-  # Docker configuration
+  # Docker configuration với TLS
   DOCKER_DRIVER: overlay2
-  DOCKER_TLS_CERTDIR: ""
-  DOCKER_HOST: tcp://docker:2375
+  DOCKER_TLS_CERTDIR: "/certs"
+  DOCKER_HOST: tcp://docker:2376
+  DOCKER_TLS_VERIFY: 1
   
   # Package Registry configuration
   IMAGE_NAME: "$CI_REGISTRY_IMAGE/team03-webapi"
@@ -42,13 +43,15 @@ prepare:
 
 build:
   stage: build
-  image: docker:20.10.16
+  image: docker:24.0.5
   services:
-    - name: docker:20.10.16-dind
+    - name: docker:24.0.5-dind
       alias: docker
   variables:
-    DOCKER_HOST: tcp://docker:2375
-    DOCKER_TLS_CERTDIR: ""
+    DOCKER_HOST: tcp://docker:2376
+    DOCKER_TLS_CERTDIR: "/certs"
+    DOCKER_TLS_VERIFY: 1
+    DOCKER_CERT_PATH: "$DOCKER_TLS_CERTDIR/client"
   rules:
     - if: $CI_COMMIT_BRANCH == $TARGET_BRANCH
   before_script:
@@ -67,6 +70,10 @@ build:
       else
         git fetch && git checkout $TARGET_BRANCH && git pull;
       fi
+    
+    # Wait for Docker daemon to be ready
+    - echo "Waiting for Docker daemon to be ready..."
+    - until docker info; do sleep 1; done
     
     # Login to GitLab Container Registry using CI_JOB_TOKEN
     - echo "Logging into GitLab Container Registry..."
